<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:icon="@drawable/ic_add"
                android:id="@+id/nav_add_event"
                android:title="@string/text_nav_add_event"/>
    </group>

    <group android:checkableBehavior="single">
        <item
                android:icon="@drawable/ic_share"
                android:id="@+id/nav_item_share"
                android:title="@string/text_nav_share"/>

    </group>
    <group android:checkableBehavior="single">
        <item
                android:icon="@drawable/ic_feedb"
                android:id="@+id/nav_item_feedback"
                android:title="@string/text_nav_write_feed_back"/>
    </group>

    <group android:checkableBehavior="single">
        <item
                android:icon="@drawable/ic_info"
                android:id="@+id/nav_item_about"
                android:title="@string/text_nav_about"/>
    </group>

    <group android:checkableBehavior="single">
        <item
                android:icon="@drawable/ic_logout"
                android:id="@+id/nav_item_logout"
                android:title="@string/text_log_out"/>
    </group>
</menu>
