<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_for_ent_main"
        tools:context=".activity.KMSignInActivity">


    <TextView
            android:text="@string/text_log_in"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textColor="@android:color/white"
            android:textSize="?android:attr/windowTitleSize" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.231" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_text_email"
            android:shadowColor="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/text_hint_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="240dp"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/ic_email"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_text_pass"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/text_hint_pass"
            android:drawableStart="@drawable/ic_lock"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintVertical_bias="0.073"
            android:importantForAutofill="no"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_error"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_pass" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.022"
            android:textColor="@android:color/holo_red_light"/>
    <Button
            android:text="@string/text_log_in"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="270dp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_for_sign_button"
            android:id="@+id/button_sign_in"
            android:textAllCaps="false"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_pass"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/text_first_time_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:shadowColor="@android:color/white" android:textColor="@android:color/white"
            android:layout_marginStart="120dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="120dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_sign_up"
            android:textColor="@color/color_text_sign_up"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"/>
</android.support.constraint.ConstraintLayout>